fixed dropdown on small screen

--- a/src/pages/MobilePhones/MobilePhones.module.scss
+++ b/src/pages/MobilePhones/MobilePhones.module.scss
@@ -39,8 +39,6 @@
 
   &__container {
     display: inline-block;
-    margin-right: 16px;
-    min-width: 100px;
   }
 }
 
